Improve font sizes on cert print to prevent overflow (#134)

--- a/lms/static/sass/certificates/_certificate-template-01.scss
+++ b/lms/static/sass/certificates/_certificate-template-01.scss
@@ -337,11 +337,11 @@
         }
 
         .student-name {
-          font-size: 42pt;
+          font-size: 36pt;
         }
 
         .course-name-main {
-          font-size: 18pt;
+          font-size: 16pt;
         }
       }
     }
